<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              android:orientation="vertical">
	<TextView android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/app_desc"/>

	<RadioGroup
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/back"
				android:id="@+id/back"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/home"
				android:id="@+id/home"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recent"
				android:id="@+id/recent"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/notifications"
				android:id="@+id/notifications"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/quick_settings"
				android:id="@+id/quick_settings"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/power_dialog"
				android:id="@+id/power_dialog"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/toggle_split_screen"
				android:id="@+id/toggle_split_screen"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/flash"
				android:id="@+id/flash"/>
		<RadioButton
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/assistant"
				android:id="@+id/assistant"/>
	</RadioGroup>

	<TextView
			android:id="@+id/service_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/service_description"/>
	<Button android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:id="@+id/restart"
			android:text="@string/restart"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/open_accessibility"
			android:id="@+id/open_accessibility"/>


</LinearLayout>